Fix odd grid spacing issue

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -20,7 +20,7 @@ body {
     min-height: 100%;
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 42px auto 55px;
+    grid-template-rows: 42px auto 55px 0;
     grid-template-areas:
         "header header header header"
         "main main main main"
